can start and stop as many times as you want

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <button onclick="oscillator.start()">
         play sine wave
     </button>
-    <button onclick="oscillator.stop()">
+    <button onclick="location.reload()">
         stop sine wave
     </button>
 </body>
