basic pitch shift functionality

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
     <h1>Oscillator</h1>
     <button onclick="oscillator.start()">
-        play sine wave
+        start oscillator
     </button>
     <button onclick="location.reload()">
-        stop sine wave
+        stop oscillator
     </button>
 </body>
 <script src="script.js"></script>
