slider working, but no portamento. waveform type buttons change the form without stopping play

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     </button>
     <br><br>
     <div>
-        <input onchange="changetype()" type="radio" name="waveform" checked vale="sine">
+        <input onchange="changeType()" type="radio" name="waveform" checked value="sine">
         Sine <br>
-        <input onchange="changetype()" type="radio" name="waveform" checked vale="sawtooth">
+        <input onchange="changeType()" type="radio" name="waveform" checked value="sawtooth">
         Sawtooth <br>
-        <input onchange="changetype()" type="radio" name="waveform" checked vale="triangle">
+        <input onchange="changeType()" type="radio" name="waveform" checked value="triangle">
         Triangle <br>
-        <input onchange="changetype()" type="radio" name="waveform" checked vale="square">
+        <input onchange="changeType()" type="radio" name="waveform" checked value="square">
         Square <br>
     </div>
     <br>
     <div>
-        <input id="freqslider" type="range" onchange="changefreq()" name="">
+        <input id="freqslider" type="range" onchange="changeFreq()" name="" default=0>
     </div>
 </body>
 <script src="script.js"></script>
