frequency slider creates portamento

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <br>
     <div>
-        <input id="freqslider" type="range" onchange="changeFreq()" name="" default=0>
+        <input id="freqslider" type="range" oninput="changeFreq()" name="" default=0>
     </div>
 </body>
 <script src="script.js"></script>
