--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Oscillator</title>
 </head>
 <body>
@@ -23,7 +24,7 @@
     </div>
     <br>
     <div>
-        <input id="freqslider" type="range" oninput="changeFreq()" name="" min="0" max="1000">
+        <input id="freqslider" type="range" oninput="changeFreq()" name="" min="0" max="100" value="0">
     </div>
 </body>
 <script src="script.js"></script>
