--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <br>
     <div>
-        <input id="freqslider" type="range" oninput="changeFreq()" name="" min="0" max="100" value="0">
+        <input id="freqslider" type="range" oninput="changeFreq()" name="" min="0" max="100" value="0" step="0.1">
     </div>
 </body>
 <script src="script.js"></script>
