--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>Oscillator</h1>
-    <button onclick="play()">
+    <!-- <button onclick="play()">
         start/stop
-    </button>
+    </button> -->
     <br><br>
     <div>
         <input checked onchange="changeType()" type="radio" name="waveform" value="square">
@@ -23,7 +23,7 @@
         Sine <br>
     </div>
     <br>
-    <div>
+    <div id="grid" onmousedown="play()" onmouseup="play()" ontouchstart="play()" ontouchend="play()">
         <input id="freqslider" type="range" oninput="changeFreq()" name="" min="0" max="100" value="0" step="0.1">
     </div>
 </body>
