--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@
         <input id="freqslider" type="range" oninput="changeFreq()" name="" min="0" max="100" value="0" step="0.1">
     </div>
 </body>
-<script src="script.js"></script>
+<script src="secondScript.js"></script>
 </html>
