--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <br>
     <div id="grid" onmousedown="play()" onmouseup="play()" ontouchstart="play()" ontouchend="play()">
         <input id="freqslider" type="range" oninput="changeFreq()" name="" min="0" max="100" value="0" step="0.1">
+        <!-- <input id="freqslider2" type="range" oninput="changeFreq2()" name="" min="0" max="100" value="0" step="0.1" orient="vertical"> -->
     </div>
 </body>
-<script src="secondScript.js"></script>
+<script src="thirdScript.js"></script>
 </html>
