--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body class="lock-screen">
     <div id="options">
         <input checked onchange="changeType()" type="radio" name="waveform" value="square">
-        Square | <input onchange="changeType()" type="radio" name="waveform" value="triangle">
-        Triangle | <input onchange="changeType()" type="radio" name="waveform" value="sawtooth">
-        Sawtooth | <input onchange="changeType()" type="radio" name="waveform" value="sine">
-        Sine
+        square | <input onchange="changeType()" type="radio" name="waveform" value="triangle">
+        triangle | <input onchange="changeType()" type="radio" name="waveform" value="sawtooth">
+        sawtooth | <input onchange="changeType()" type="radio" name="waveform" value="sine">
+        sine
     </div>
     <br>
     <div id="grid" onmousedown="play()" onmouseup="play()" ontouchstart="play()" ontouchend="play()"></div>
