got rid of all touch-related references. will cross that bridge at a later time. need to focus of functionality

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         Sine
     </div>
     <br>
-    <div id="grid" onmousedown="play()" onmouseup="play()" ontouchstart="play()" ontouchend="play()"></div>
+    <div id="grid" onmousedown="play()" onmouseup="play()"></div>
 </body>
 <script src="script.js"></script>
 </html>
