oscillators' play functions have been split into two separate functions so that one of them can be turned on/off

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         Sine
     </div>
     <br>
-    <div id="grid" onmousedown="play()" onmouseup="play()"></div>
+    <div id="grid" onmousedown="play(), play2()" onmouseup="play(), play2()"></div>
 </body>
 <script src="script.js"></script>
 </html>
