--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <title>Oscillator</title>
 </head>
 <body class="lock-screen">
-    <div id="options">
-        <input checked onchange="changeType()" type="radio" name="waveform" value="square">
-        Square | <input onchange="changeType()" type="radio" name="waveform" value="triangle">
-        Triangle | <input onchange="changeType()" type="radio" name="waveform" value="sawtooth">
-        Sawtooth | <input onchange="changeType()" type="radio" name="waveform" value="sine">
-        Sine
+    <div id="wave-options">
+        <input checked onchange="changeType()" type="radio" name="waveform" value="square">Square | 
+        <input onchange="changeType()" type="radio" name="waveform" value="triangle">Triangle | 
+        <input onchange="changeType()" type="radio" name="waveform" value="sawtooth">Sawtooth | 
+        <input onchange="changeType()" type="radio" name="waveform" value="sine">Sine
+    </div>
+    <div id="combo-options">
+        <input checked type="radio" name="combo" value="mono">Monophonic
+        <input id="poly-radio" type="radio" name="combo" value="poly">Polyphonic
     </div>
     <br>
     <div id="grid" onmousedown="play(), play2()" onmouseup="play(), play2()"></div>
