got rid of m6 and M6 options. just getting excessive

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
         <input id="m3" type="radio" name="harmony" value="m3">m3 |
         <input id="M3" type="radio" name="harmony" value="M3">M3 |
         <input id="P4" type="radio" name="harmony" value="P4">P4 |
-        <input id="P5" type="radio" name="harmony" value="P5">P5 |
-        <input id="m6" type="radio" name="harmony" value="m6">m6 |
+        <input id="P5" type="radio" name="harmony" value="P5">P5
     </div>
     <div id="wave-options">
         Wave 1:<input checked onchange="changeType()" type="radio" name="waveform" value="square">Square | 
@@ -38,7 +37,7 @@
         <input onchange="changeType2()" type="radio" name="waveform2" value="sine">Sine
     </div>
     <br>
-    <div id="grid" onmousedown="play(), play2(), play3(), play4(), play5(), play6(), play7(), play8(), play9(), play10()" onmouseup="play(), play2(), play3(), play4(), play5(), play6(), play7(), play8(), play9(), play10()"></div>
+    <div id="grid" onmousedown="play(), play2(), play3(), play4(), play5(), play6(), play7(), play8(), play9()" onmouseup="play(), play2(), play3(), play4(), play5(), play6(), play7(), play8(), play9()"></div>
 </body>
 <script src="script.js"></script>
 </html>
