added comments, rearranged waveform options and defaults from least to most harsh

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         <input id="P5" type="radio" name="harmony" value="P5">P5
     </div>
     <div id="wave-options">
-        Wave 1:<input checked onchange="changeTypeX()" type="radio" name="waveform" value="square">Square | 
+        Wave 1:<input checked onchange="changeTypeX()" type="radio" name="waveform" value="sine">Sine | 
         <input onchange="changeTypeX()" type="radio" name="waveform" value="triangle">Triangle | 
         <input onchange="changeTypeX()" type="radio" name="waveform" value="sawtooth">Sawtooth | 
-        <input onchange="changeTypeX()" type="radio" name="waveform" value="sine">Sine<br>
-        Wave 2 (if 2D activated):<input checked onchange="changeTypeY()" type="radio" name="waveform2" value="square">Square |
+        <input onchange="changeTypeX()" type="radio" name="waveform" value="square">Square<br>
+        Wave 2 (if 2D activated):<input checked onchange="changeTypeY()" type="radio" name="waveform2" value="sine">Sine |
         <input onchange="changeTypeY()" type="radio" name="waveform2" value="triangle">Triangle |
         <input onchange="changeTypeY()" type="radio" name="waveform2" value="sawtooth">Sawtooth |
-        <input onchange="changeTypeY()" type="radio" name="waveform2" value="sine">Sine
+        <input onchange="changeTypeY()" type="radio" name="waveform2" value="square">Square
     </div>
     <br>
     <div id="grid" onmousedown="playX(), playY(), playX2()" onmouseup="playX(), playY(), playX2()"></div>
