--- a/oldIndex.html
+++ b/oldIndex.html
@@ -4,21 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="oldStyle.css">
-    <title>Oscillator</title>
+    <title>Scanner</title>
 </head>
 <body>
-    <div id="options">
-        <input checked onchange="changeType()" type="radio" name="waveform" value="square">
-        Square | <input onchange="changeType()" type="radio" name="waveform" value="triangle">
-        Triangle | <input onchange="changeType()" type="radio" name="waveform" value="sawtooth">
-        Sawtooth | <input onchange="changeType()" type="radio" name="waveform" value="sine">
-        Sine
-    </div>
-    <div id="grid" onmousedown="play()" onmouseup="play()" ontouchstart="play()" ontouchend="play()">
-        <input id="freqslider2" type="range" oninput="changeFreq2()" name="" min="0" max="100" value="0" step="0.1" orient="vertical">
-        <input id="freqslider" type="range" oninput="changeFreq()" name="" min="0" max="100" value="0" step="0.1">
-        
-    </div>
+    <canvas id="canvas" width="218" height="218"></canvas>
 </body>
 <script src="oldScript.js"></script>
 </html>
