cleaned up options area

--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
     </div>
     <div id="harmony-options">
         Harmony (1D only. Turn tremolo off to apply):
-        <input id="P1" checked type="radio" name="harmony" value="P1">P1 |
-        <input id="m2" type="radio" name="harmony" value="m2">m2 |
-        <input id="M2" type="radio" name="harmony" value="M2">M2 |
-        <input id="m3" type="radio" name="harmony" value="m3">m3 |
-        <input id="M3" type="radio" name="harmony" value="M3">M3 |
-        <input id="P4" type="radio" name="harmony" value="P4">P4 |
+        <input id="P1" checked type="radio" name="harmony" value="P1">P1
+        <input id="m2" type="radio" name="harmony" value="m2">m2
+        <input id="M2" type="radio" name="harmony" value="M2">M2
+        <input id="m3" type="radio" name="harmony" value="m3">m3
+        <input id="M3" type="radio" name="harmony" value="M3">M3
+        <input id="P4" type="radio" name="harmony" value="P4">P4
         <input id="P5" type="radio" name="harmony" value="P5">P5
     </div>
     <div id="wave-options">
-        Wave 1:<input checked onchange="changeTypeX()" type="radio" name="waveform" value="sine">Sine | 
-        <input onchange="changeTypeX()" type="radio" name="waveform" value="triangle">Triangle | 
-        <input onchange="changeTypeX()" type="radio" name="waveform" value="sawtooth">Sawtooth | 
+        Wave 1:<input checked onchange="changeTypeX()" type="radio" name="waveform" value="sine">Sine 
+        <input onchange="changeTypeX()" type="radio" name="waveform" value="triangle">Triangle
+        <input onchange="changeTypeX()" type="radio" name="waveform" value="sawtooth">Sawtooth
         <input onchange="changeTypeX()" type="radio" name="waveform" value="square">Square<br>
-        Wave 2 (if 2D activated):<input checked onchange="changeTypeY()" type="radio" name="waveform2" value="sine">Sine |
-        <input onchange="changeTypeY()" type="radio" name="waveform2" value="triangle">Triangle |
-        <input onchange="changeTypeY()" type="radio" name="waveform2" value="sawtooth">Sawtooth |
+        Wave 2 (if 2D activated):<input checked onchange="changeTypeY()" type="radio" name="waveform2" value="sine">Sine
+        <input onchange="changeTypeY()" type="radio" name="waveform2" value="triangle">Triangle
+        <input onchange="changeTypeY()" type="radio" name="waveform2" value="sawtooth">Sawtooth
         <input onchange="changeTypeY()" type="radio" name="waveform2" value="square">Square
     </div>
     <br>
