implemented patch to run in safari

--- a/index.html
+++ b/index.html
@@ -43,5 +43,6 @@
         <canvas id="canvas"></canvas>
     </div>
 </body>
+<script src="http://cwilso.github.com/AudioContext-MonkeyPatch/AudioContextMonkeyPatch.js"></script>
 <script src="script.js"></script>
 </html>
