added link to mobile version

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         Wave 2 (if 2D activated):<input checked onchange="changeTypeY()" type="radio" name="waveform2" value="sine">Sine
         <input onchange="changeTypeY()" type="radio" name="waveform2" value="triangle">Triangle
         <input onchange="changeTypeY()" type="radio" name="waveform2" value="sawtooth">Sawtooth
-        <input onchange="changeTypeY()" type="radio" name="waveform2" value="square">Square
+        <input onchange="changeTypeY()" type="radio" name="waveform2" value="square">Square<br><br>
+        <a href="https://blake-d.github.io/web-oscillator-mobile/">try the mobile version</a>
     </div>
     <br>
     <div id="grid" onmousedown="playX(), playY(), playX2()" onmouseup="playX(), playY(), playX2()">
